# INQUIREA

./: .env.example  .gitignore  README.md  alembic.ini  inquirea.db-shm  inquirea.db-wal  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0902dbd5c2d3_add_google_auth_fields.py  6908c1a66d14_initial_schema.py  cec5a8c7d7c4_initial_schema.py  dc9e236ad3b5_initial_schema.py  de21267c8b1a_initial.py
backend/app/: main.py
backend/app/agents/: analysis_agent.py  base_agent.py  bootstrap.py  classification_agent.py  exceptions.py  extraction_agent.py  memory_agent.py  outputs.py  registry.py  reply_agent.py  state.py  summary_agent.py  supervisor_agent.py  test_agent.py
backend/app/api/: agents.py  auth.py  email_intelligence.py  gmail.py
backend/app/auth/: dependencies.py  jwt.py  oauth.py
backend/app/core/: config.py  dependencies.py  llm.py
backend/app/database/: session.py
backend/app/memory/: vector_store.py
backend/app/memory/chroma/: chroma.sqlite3
backend/app/models/: __init__.py  agent_run.py  approval.py  chat_history.py  draft_reply.py  email.py  email_attachment.py  email_category.py  email_intelligence.py  email_thread.py  users.py  workflow_run.py
backend/app/schemas/: email_intelligence.py  gmail.py
backend/app/services/: email_intelligence_service.py  email_sync_service.py  gmail_service.py  google_token_service.py
backend/app/tools/: base_tool.py  bootstrap.py  date_tool.py  registry.py
backend/app/workflows/: email_graph.py  email_nodes.py  workflow_service.py  workflow_state.py
