[project]
name = "inquirea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.7.2",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
